<resources>
    <string name="app_name">WidgetEstados</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

    <string name="permissions_denial">In order to use this app, you must accept the permissions.</string>
    <string name="image_states">Image States</string>
    <string name="states">Estados</string>
    <string name="talking">Talking</string>
    <string name="idle">Idle</string>
    <string name="locked">Locked</string>
    <string name="add_phone">Add Random Phone</string>
    <string name="viewList">View Phones List</string>
    <string name="phonesList">Phones List</string>
</resources>
